2016-02-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c,
    gpasm/gpasm.h.in, gpasm/processor.c, gpasm/util.c,
    libgputils/gpprocessor.c, libgputils/gpprocessor.c:
    New constants: __ENHANCED, __EXTENDED, __NUM_BANKS,
    __BANK_..., __NUM_PAGES, __PAGE_...

  * libgputils/Makefile.am, libgputils/Makefile.in:
    Removed this unnecessary line: -DPUB_PATH=\"@GPUTILS_PUB_PATH@\"

2016-02-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/gpasm.c, gpasm/gperror.c, gpasm/gperror.h,
    gpasm/processor.c, gpasm/pparse.y:
    Feature requests: "#64 Better error handling" 6.

2016-02-09  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/processor.c:
    Feature requests: "#64 Better error handling" 5.

2016-02-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Corrected the date.

  * Makefile.in, */Makefile.in, bootstrap.sh, config.h.in,
    configure.ac, configure:
    refresh

2016-02-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * Makefile.in, */Makefile.in, bootstrap.sh, config.h.in,
    configure.ac, configure, doc/gputils.lyx, gpasm/processor.c:
    New constants: __GPUTILS_SVN_VERSION, __GPUTILS_VERSION_MAJOR,
    __GPUTILS_VERSION_MINOR, __GPUTILS_VERSION_MICRO
    Feature requests: "#64 Better error handling" 4.

2016-02-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/processor.c
    New constants: __12_BIT, __14_BIT, __16_BIT

  * gpasm/directive.c, gpasm/evaluate.c, gpasm/gpasm.c,
    gpasm/gpasm.h.in, gpasm/parse.y, gpasm/processor.c, gpasm/util.c:
    Feature requests: "#64 Better error handling" 3.
    At the end of the first pass will erase the processor-dependent
    constants. These are re-created during of the second pass.

  * gpasm/preprocess:
    Code cosmetic.

2016-02-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>